crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__generator.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/parenthesized/generator.py
---
## AST

```
Module(
    ModModule {
        range: 0..36,
        body: [
            Expr(
                StmtExpr {
                    range: 0..15,
                    value: Generator(
                        ExprGenerator {
                            range: 0..15,
                            elt: Starred(
                                ExprStarred {
                                    range: 1..3,
                                    value: Name(
                                        ExprName {
                                            range: 2..3,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 4..14,
                                    target: Name(
                                        ExprName {
                                            range: 8..9,
                                            id: "x",
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            range: 13..14,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 16..24,
                    value: Tuple(
                        ExprTuple {
                            range: 16..24,
                            elts: [
                                Named(
                                    ExprNamed {
                                        range: 17..23,
                                        target: Name(
                                            ExprName {
                                                range: 17..18,
                                                id: "x",
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 22..23,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            For(
                StmtFor {
                    range: 25..35,
                    is_async: false,
                    target: Name(
                        ExprName {
                            range: 29..30,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            range: 34..35,
                            id: "y",
                            ctx: Load,
                        },
                    ),
                    body: [],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | (*x for x in y)
  |  ^^ Syntax Error: Iterable unpacking cannot be used in a comprehension
2 | (x := 1, for x in y)
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |          ^^^ Syntax Error: Expected ')', found 'for'
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |                    ^ Syntax Error: Expected ':', found ')'
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |                      Syntax Error: Expected a statement
  |
