crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__missing_closing_paren_0.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/parenthesized/missing_closing_paren_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..47,
        body: [
            Expr(
                StmtExpr {
                    range: 46..47,
                    value: Name(
                        ExprName {
                            range: 47..47,
                            id: "",
                            ctx: Invalid,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Missing closing parentheses 0: No elements
2 | 
3 | (
  |   Syntax Error: unexpected EOF while parsing
  |
